Convert mockup to static html
I found this process to be a bit harder than it looks. Mainly trying to
make layout work under BEM guidelines. Still working on it.

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,5 +5,28 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="app__location">Caracas, Venezuela</div>
+      </div>
+      <div class="row">
+        <div class="app__temperature">76º</div>
+      </div>
+      <div class="row">
+        <div class="app__icon"></div>
+      </div>
+      <div class="row">
+        <div class="app__summary">Mostly cloudy</div>
+      </div>
+      <div class="row">
+        <div class="app__footer">
+          <p>Alberto De Lucca 2017</p>
+          <p class="app__footer app__footer--light">Powered by Dark Sky</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="app__button"></div>
+    </div>
   </body>
 </html>
