Add placeholder code for images

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -14,20 +14,20 @@
         <div class="app__temperature">76º</div>
       </div>
       <div class="row">
-        <div class="app__icon"></div>
+        <img src="./img/cloudy.svg" class="app__icon">
       </div>
       <div class="row">
         <div class="app__summary">Mostly cloudy</div>
       </div>
       <div class="row">
         <div class="app__footer">
-          <p>Alberto De Lucca 2017</p>
-          <p class="app__footer app__footer--light">Powered by Dark Sky</p>
+         <span>Alberto De Lucca &copy; 2017</span></br>
+          <span class="app__footer app__footer--light">Powered by Dark Sky</span>
         </div>
       </div>
-    </div>
     <div class="row">
-      <div class="app__button"></div>
+      <img src="img/fahrenheit.svg" class="app__button">
+    </div>
     </div>
   </body>
 </html>
