Add links to footer

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -21,8 +21,8 @@
       </div>
       <div class="row">
         <div class="app__footer">
-         <span>Alberto De Lucca &copy; 2017</span></br>
-          <span class="app__footer app__footer--light">Powered by Dark Sky</span>
+         <span><a href="https://github.com/adeluccar">Alberto De Lucca</a> &copy; 2017</span></br>
+          <span class="app__footer app__footer--light">Powered by <a href="https://darksky.net/poweredby/" target="_blank">Dark Sky</a></span>
         </div>
       </div>
     <div class="row">
