Remove placeholder text

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -8,16 +8,16 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="app__location">Caracas, Venezuela</div>
+        <div class="app__location"></div>
       </div>
       <div class="row">
-        <div class="app__temperature">76º</div>
+        <div class="app__temperature"></div>
       </div>
       <div class="row">
-        <img src="./img/cloudy.svg" class="app__icon">
+        <img src="./img/clear-day.svg" class="app__icon">
       </div>
       <div class="row">
-        <div class="app__summary">Mostly cloudy</div>
+        <div class="app__summary">Loading</div>
       </div>
       <div class="row">
         <div class="app__footer">
@@ -26,7 +26,9 @@
         </div>
       </div>
     <div class="row">
-      <img src="img/fahrenheit.svg" class="app__button">
+      <a id="changeUnit" href="#">
+        <img src="img/fahrenheit.svg" class="app__button">
+      </a>
     </div>
     </div>
   </body>
