--- a/src/index.ejs
+++ b/src/index.ejs
@@ -21,15 +21,15 @@
       </div>
       <div class="row">
         <div class="app__footer">
-         <span><a href="https://github.com/adeluccar">Alberto De Lucca</a> &copy; 2017</span></br>
+          <span><a href="https://github.com/adeluccar">Alberto De Lucca</a> &copy; 2017</span></br>
           <span class="app__footer app__footer--light">Powered by <a href="https://darksky.net/poweredby/" target="_blank">Dark Sky</a></span>
         </div>
       </div>
-    <div class="row">
-      <a id="changeUnit" href="#">
-        <img src="img/fahrenheit.svg" class="app__button">
-      </a>
-    </div>
+      <div class="row">
+        <a href="#">
+          <img id="button" src="img/fahrenheit.svg" class="is-fahrenheit">
+        </a>
+      </div>
     </div>
   </body>
 </html>
