--- a/src/index.ejs
+++ b/src/index.ejs
@@ -27,7 +27,7 @@
       </div>
       <div class="row">
         <a href="#">
-          <img id="button" src="img/fahrenheit.svg" class="app__button is-fahrenheit">
+          <img id="button" src="img/celsius.svg" class="app__button is-fahrenheit">
         </a>
       </div>
     </div>
